[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/player/player_block.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/Nametag.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/models/eyes.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/gui/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/sound_shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 1.1006

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Collision_Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.800572, 0 )
shape = SubResource( 1 )

[node name="rotation_helper" type="Spatial" parent="."]

[node name="camera_rot" type="Spatial" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49215, -0.0863764 )

[node name="camera" type="Camera" parent="rotation_helper/camera_rot"]
fov = 90.0

[node name="ShootPosition" type="Position3D" parent="rotation_helper/camera_rot/camera"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, -1.35489 )

[node name="Eyes" type="MeshInstance" parent="rotation_helper/camera_rot"]
transform = Transform( -4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 0.0445427, 0, -0.0125369 )
visible = false
layers = 2
mesh = ExtResource( 4 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null

[node name="player" parent="rotation_helper" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="Nametag" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2438, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="sound_shoot" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.564, 0 )
stream = ExtResource( 6 )
bus = "Effects"
